lisp/src/bison-flex-output/parser.output
State 51 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: s_expr EOL
    2        | s_expr EOFT
    3        | EOL
    4        | EOFT

    5 s_expr: f_expr
    6       | SYMBOL
    7       | LPAREN let_section s_expr RPAREN
    8       | LPAREN COND s_expr s_expr s_expr RPAREN
    9       | number
   10       | QUIT
   11       | error

   12 let_section: LPAREN LET let_list RPAREN

   13 let_list: let_elem
   14         | let_elem let_list

   15 let_elem: LPAREN SYMBOL s_expr RPAREN
   16         | LPAREN TYPE SYMBOL s_expr RPAREN
   17         | LPAREN SYMBOL LAMBDA LPAREN arg_list RPAREN s_expr RPAREN
   18         | LPAREN TYPE SYMBOL LAMBDA LPAREN arg_list RPAREN s_expr RPAREN

   19 f_expr: LPAREN FUNC s_expr_section RPAREN
   20       | LPAREN SYMBOL s_expr_section RPAREN

   21 arg_list: SYMBOL
   22         | SYMBOL arg_list
   23         | /* empty */

   24 s_expr_section: s_expr_list
   25               | /* empty */

   26 s_expr_list: s_expr
   27            | s_expr s_expr_list

   28 number: INT
   29       | FLOAT


Terminals, with rules where they appear

$end (0) 0
error (256) 11
FUNC (258) 19
TYPE (259) 16 18
INT (260) 28
FLOAT (261) 29
SYMBOL (262) 6 15 16 17 18 20 21 22
QUIT (263) 10
EOL (264) 1 3
EOFT (265) 2 4
LPAREN (266) 7 8 12 15 16 17 18 19 20
RPAREN (267) 7 8 12 15 16 17 18 19 20
LET (268) 12
COND (269) 8
LAMBDA (270) 17 18


Nonterminals, with rules where they appear

$accept (16)
    on left: 0
program (17)
    on left: 1 2 3 4, on right: 0
s_expr (18)
    on left: 5 6 7 8 9 10 11, on right: 1 2 7 8 15 16 17 18 26 27
let_section (19)
    on left: 12, on right: 7
let_list (20)
    on left: 13 14, on right: 12 14
let_elem (21)
    on left: 15 16 17 18, on right: 13 14
f_expr (22)
    on left: 19 20, on right: 5
arg_list (23)
    on left: 21 22 23, on right: 17 18 22
s_expr_section (24)
    on left: 24 25, on right: 19 20
s_expr_list (25)
    on left: 26 27, on right: 24 27
number (26)
    on left: 28 29, on right: 9


state 0

    0 $accept: . program $end

    error   shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    SYMBOL  shift, and go to state 4
    QUIT    shift, and go to state 5
    EOL     shift, and go to state 6
    EOFT    shift, and go to state 7
    LPAREN  shift, and go to state 8

    program  go to state 9
    s_expr   go to state 10
    f_expr   go to state 11
    number   go to state 12


state 1

   11 s_expr: error .

    $default  reduce using rule 11 (s_expr)


state 2

   28 number: INT .

    $default  reduce using rule 28 (number)


state 3

   29 number: FLOAT .

    $default  reduce using rule 29 (number)


state 4

    6 s_expr: SYMBOL .

    $default  reduce using rule 6 (s_expr)


state 5

   10 s_expr: QUIT .

    $default  reduce using rule 10 (s_expr)


state 6

    3 program: EOL .

    $default  reduce using rule 3 (program)


state 7

    4 program: EOFT .

    $default  reduce using rule 4 (program)


state 8

    7 s_expr: LPAREN . let_section s_expr RPAREN
    8       | LPAREN . COND s_expr s_expr s_expr RPAREN
   19 f_expr: LPAREN . FUNC s_expr_section RPAREN
   20       | LPAREN . SYMBOL s_expr_section RPAREN

    FUNC    shift, and go to state 13
    SYMBOL  shift, and go to state 14
    LPAREN  shift, and go to state 15
    COND    shift, and go to state 16

    let_section  go to state 17


state 9

    0 $accept: program . $end

    $end  shift, and go to state 18


state 10

    1 program: s_expr . EOL
    2        | s_expr . EOFT

    EOL   shift, and go to state 19
    EOFT  shift, and go to state 20


state 11

    5 s_expr: f_expr .

    $default  reduce using rule 5 (s_expr)


state 12

    9 s_expr: number .

    $default  reduce using rule 9 (s_expr)


state 13

   19 f_expr: LPAREN FUNC . s_expr_section RPAREN

    error   shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    SYMBOL  shift, and go to state 4
    QUIT    shift, and go to state 5
    LPAREN  shift, and go to state 8

    RPAREN  reduce using rule 25 (s_expr_section)

    s_expr          go to state 21
    f_expr          go to state 11
    s_expr_section  go to state 22
    s_expr_list     go to state 23
    number          go to state 12


state 14

   20 f_expr: LPAREN SYMBOL . s_expr_section RPAREN

    error   shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    SYMBOL  shift, and go to state 4
    QUIT    shift, and go to state 5
    LPAREN  shift, and go to state 8

    RPAREN  reduce using rule 25 (s_expr_section)

    s_expr          go to state 21
    f_expr          go to state 11
    s_expr_section  go to state 24
    s_expr_list     go to state 23
    number          go to state 12


state 15

   12 let_section: LPAREN . LET let_list RPAREN

    LET  shift, and go to state 25


state 16

    8 s_expr: LPAREN COND . s_expr s_expr s_expr RPAREN

    error   shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    SYMBOL  shift, and go to state 4
    QUIT    shift, and go to state 5
    LPAREN  shift, and go to state 8

    s_expr  go to state 26
    f_expr  go to state 11
    number  go to state 12


state 17

    7 s_expr: LPAREN let_section . s_expr RPAREN

    error   shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    SYMBOL  shift, and go to state 4
    QUIT    shift, and go to state 5
    LPAREN  shift, and go to state 8

    s_expr  go to state 27
    f_expr  go to state 11
    number  go to state 12


state 18

    0 $accept: program $end .

    $default  accept


state 19

    1 program: s_expr EOL .

    $default  reduce using rule 1 (program)


state 20

    2 program: s_expr EOFT .

    $default  reduce using rule 2 (program)


state 21

   26 s_expr_list: s_expr .
   27            | s_expr . s_expr_list

    error   shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    SYMBOL  shift, and go to state 4
    QUIT    shift, and go to state 5
    LPAREN  shift, and go to state 8

    RPAREN  reduce using rule 26 (s_expr_list)

    s_expr       go to state 21
    f_expr       go to state 11
    s_expr_list  go to state 28
    number       go to state 12


state 22

   19 f_expr: LPAREN FUNC s_expr_section . RPAREN

    RPAREN  shift, and go to state 29


state 23

   24 s_expr_section: s_expr_list .

    $default  reduce using rule 24 (s_expr_section)


state 24

   20 f_expr: LPAREN SYMBOL s_expr_section . RPAREN

    RPAREN  shift, and go to state 30


state 25

   12 let_section: LPAREN LET . let_list RPAREN

    LPAREN  shift, and go to state 31

    let_list  go to state 32
    let_elem  go to state 33


state 26

    8 s_expr: LPAREN COND s_expr . s_expr s_expr RPAREN

    error   shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    SYMBOL  shift, and go to state 4
    QUIT    shift, and go to state 5
    LPAREN  shift, and go to state 8

    s_expr  go to state 34
    f_expr  go to state 11
    number  go to state 12


state 27

    7 s_expr: LPAREN let_section s_expr . RPAREN

    RPAREN  shift, and go to state 35


state 28

   27 s_expr_list: s_expr s_expr_list .

    $default  reduce using rule 27 (s_expr_list)


state 29

   19 f_expr: LPAREN FUNC s_expr_section RPAREN .

    $default  reduce using rule 19 (f_expr)


state 30

   20 f_expr: LPAREN SYMBOL s_expr_section RPAREN .

    $default  reduce using rule 20 (f_expr)


state 31

   15 let_elem: LPAREN . SYMBOL s_expr RPAREN
   16         | LPAREN . TYPE SYMBOL s_expr RPAREN
   17         | LPAREN . SYMBOL LAMBDA LPAREN arg_list RPAREN s_expr RPAREN
   18         | LPAREN . TYPE SYMBOL LAMBDA LPAREN arg_list RPAREN s_expr RPAREN

    TYPE    shift, and go to state 36
    SYMBOL  shift, and go to state 37


state 32

   12 let_section: LPAREN LET let_list . RPAREN

    RPAREN  shift, and go to state 38


state 33

   13 let_list: let_elem .
   14         | let_elem . let_list

    LPAREN  shift, and go to state 31

    $default  reduce using rule 13 (let_list)

    let_list  go to state 39
    let_elem  go to state 33


state 34

    8 s_expr: LPAREN COND s_expr s_expr . s_expr RPAREN

    error   shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    SYMBOL  shift, and go to state 4
    QUIT    shift, and go to state 5
    LPAREN  shift, and go to state 8

    s_expr  go to state 40
    f_expr  go to state 11
    number  go to state 12


state 35

    7 s_expr: LPAREN let_section s_expr RPAREN .

    $default  reduce using rule 7 (s_expr)


state 36

   16 let_elem: LPAREN TYPE . SYMBOL s_expr RPAREN
   18         | LPAREN TYPE . SYMBOL LAMBDA LPAREN arg_list RPAREN s_expr RPAREN

    SYMBOL  shift, and go to state 41


state 37

   15 let_elem: LPAREN SYMBOL . s_expr RPAREN
   17         | LPAREN SYMBOL . LAMBDA LPAREN arg_list RPAREN s_expr RPAREN

    error   shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    SYMBOL  shift, and go to state 4
    QUIT    shift, and go to state 5
    LPAREN  shift, and go to state 8
    LAMBDA  shift, and go to state 42

    s_expr  go to state 43
    f_expr  go to state 11
    number  go to state 12


state 38

   12 let_section: LPAREN LET let_list RPAREN .

    $default  reduce using rule 12 (let_section)


state 39

   14 let_list: let_elem let_list .

    $default  reduce using rule 14 (let_list)


state 40

    8 s_expr: LPAREN COND s_expr s_expr s_expr . RPAREN

    RPAREN  shift, and go to state 44


state 41

   16 let_elem: LPAREN TYPE SYMBOL . s_expr RPAREN
   18         | LPAREN TYPE SYMBOL . LAMBDA LPAREN arg_list RPAREN s_expr RPAREN

    error   shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    SYMBOL  shift, and go to state 4
    QUIT    shift, and go to state 5
    LPAREN  shift, and go to state 8
    LAMBDA  shift, and go to state 45

    s_expr  go to state 46
    f_expr  go to state 11
    number  go to state 12


state 42

   17 let_elem: LPAREN SYMBOL LAMBDA . LPAREN arg_list RPAREN s_expr RPAREN

    LPAREN  shift, and go to state 47


state 43

   15 let_elem: LPAREN SYMBOL s_expr . RPAREN

    RPAREN  shift, and go to state 48


state 44

    8 s_expr: LPAREN COND s_expr s_expr s_expr RPAREN .

    $default  reduce using rule 8 (s_expr)


state 45

   18 let_elem: LPAREN TYPE SYMBOL LAMBDA . LPAREN arg_list RPAREN s_expr RPAREN

    LPAREN  shift, and go to state 49


state 46

   16 let_elem: LPAREN TYPE SYMBOL s_expr . RPAREN

    RPAREN  shift, and go to state 50


state 47

   17 let_elem: LPAREN SYMBOL LAMBDA LPAREN . arg_list RPAREN s_expr RPAREN

    SYMBOL  shift, and go to state 51

    $default  reduce using rule 23 (arg_list)

    arg_list  go to state 52


state 48

   15 let_elem: LPAREN SYMBOL s_expr RPAREN .

    $default  reduce using rule 15 (let_elem)


state 49

   18 let_elem: LPAREN TYPE SYMBOL LAMBDA LPAREN . arg_list RPAREN s_expr RPAREN

    SYMBOL  shift, and go to state 51

    $default  reduce using rule 23 (arg_list)

    arg_list  go to state 53


state 50

   16 let_elem: LPAREN TYPE SYMBOL s_expr RPAREN .

    $default  reduce using rule 16 (let_elem)


state 51

   21 arg_list: SYMBOL .
   22         | SYMBOL . arg_list

    SYMBOL  shift, and go to state 51

    RPAREN    reduce using rule 21 (arg_list)
    RPAREN    [reduce using rule 23 (arg_list)]
    $default  reduce using rule 21 (arg_list)

    arg_list  go to state 54


state 52

   17 let_elem: LPAREN SYMBOL LAMBDA LPAREN arg_list . RPAREN s_expr RPAREN

    RPAREN  shift, and go to state 55


state 53

   18 let_elem: LPAREN TYPE SYMBOL LAMBDA LPAREN arg_list . RPAREN s_expr RPAREN

    RPAREN  shift, and go to state 56


state 54

   22 arg_list: SYMBOL arg_list .

    $default  reduce using rule 22 (arg_list)


state 55

   17 let_elem: LPAREN SYMBOL LAMBDA LPAREN arg_list RPAREN . s_expr RPAREN

    error   shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    SYMBOL  shift, and go to state 4
    QUIT    shift, and go to state 5
    LPAREN  shift, and go to state 8

    s_expr  go to state 57
    f_expr  go to state 11
    number  go to state 12


state 56

   18 let_elem: LPAREN TYPE SYMBOL LAMBDA LPAREN arg_list RPAREN . s_expr RPAREN

    error   shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    SYMBOL  shift, and go to state 4
    QUIT    shift, and go to state 5
    LPAREN  shift, and go to state 8

    s_expr  go to state 58
    f_expr  go to state 11
    number  go to state 12


state 57

   17 let_elem: LPAREN SYMBOL LAMBDA LPAREN arg_list RPAREN s_expr . RPAREN

    RPAREN  shift, and go to state 59


state 58

   18 let_elem: LPAREN TYPE SYMBOL LAMBDA LPAREN arg_list RPAREN s_expr . RPAREN

    RPAREN  shift, and go to state 60


state 59

   17 let_elem: LPAREN SYMBOL LAMBDA LPAREN arg_list RPAREN s_expr RPAREN .

    $default  reduce using rule 17 (let_elem)


state 60

   18 let_elem: LPAREN TYPE SYMBOL LAMBDA LPAREN arg_list RPAREN s_expr RPAREN .

    $default  reduce using rule 18 (let_elem)
